--- a/package.json
+++ b/package.json
@@ -20,22 +20,27 @@
     "@payloadcms/payload-cloud": "3.42.0",
     "@payloadcms/richtext-lexical": "3.42.0",
     "@payloadcms/ui": "3.42.0",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
     "next": "15.3.0",
     "payload": "3.42.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "0.32.6"
+    "sharp": "0.32.6",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.5.4",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.3.0",
     "prettier": "^3.4.2",
+    "tailwindcss": "3",
     "typescript": "5.7.3"
   },
   "engines": {
