--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@payloadcms/payload-cloud": "3.42.0",
     "@payloadcms/richtext-lexical": "3.42.0",
     "@payloadcms/ui": "3.42.0",
+    "@react-google-maps/api": "^2.20.6",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "graphql": "^16.8.1",
     "next": "15.3.0",
     "payload": "3.42.0",
