--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 DATABASE_URI=mongodb://127.0.0.1/your-database-name
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+PAYLOAD_SECRET=
+
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
+
+MAP_KEY=
