--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "payload": "3.42.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "sharp": "0.32.6",
     "tailwind-merge": "^3.3.1"
   },
