--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@payloadcms/db-mongodb": "3.42.0",
     "@payloadcms/next": "3.42.0",
     "@payloadcms/payload-cloud": "3.42.0",
     "@payloadcms/richtext-lexical": "3.42.0",
     "@payloadcms/ui": "3.42.0",
     "@react-google-maps/api": "^2.20.6",
+    "bootstrap": "^5.3.7",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "embla-carousel": "^8.6.0",
@@ -29,9 +31,13 @@
     "next": "15.3.0",
     "payload": "3.42.0",
     "react": "19.1.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-slick": "^0.30.3",
+    "reactstrap": "^9.2.3",
     "sharp": "0.32.6",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
