--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,2 @@
 DATABASE_URI=mongodb://127.0.0.1/your-database-name
-PAYLOAD_SECRET=
-
-ADMIN_EMAIL=
-ADMIN_PASSWORD=
-
-MAP_KEY=
+PAYLOAD_SECRET=YOUR_SECRET_HERE
