--- a/package.json
+++ b/package.json
@@ -5,52 +5,48 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
+    "build": "cross-env NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
-    "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
-    "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
-    "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
-    "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
+    "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@payloadcms/db-mongodb": "3.42.0",
-    "@payloadcms/next": "3.42.0",
-    "@payloadcms/payload-cloud": "3.42.0",
-    "@payloadcms/richtext-lexical": "3.42.0",
-    "@payloadcms/ui": "3.42.0",
-    "@react-google-maps/api": "^2.20.6",
-    "bootstrap": "^5.3.7",
-    "clsx": "^2.1.1",
+    "@fortawesome/fontawesome-free": "^7.0.0",
+    "@payloadcms/db-mongodb": "3.53.0",
+    "@payloadcms/next": "3.53.0",
+    "@payloadcms/payload-cloud": "3.53.0",
+    "@payloadcms/richtext-lexical": "3.53.0",
+    "@payloadcms/ui": "3.53.0",
+    "@react-google-maps/api": "^2.20.7",
+    "@tailwindcss/postcss": "^4.1.12",
     "cross-env": "^7.0.3",
+    "dotenv": "16.4.7",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "graphql": "^16.8.1",
-    "next": "15.3.0",
-    "payload": "3.42.0",
+    "next": "15.4.4",
+    "payload": "3.53.0",
     "react": "19.1.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0",
-    "react-slick": "^0.30.3",
-    "reactstrap": "^9.2.3",
-    "sharp": "0.32.6",
-    "slick-carousel": "^1.8.1",
-    "tailwind-merge": "^3.3.1"
+    "react-slick": "^0.31.0",
+    "sharp": "0.34.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.5.4",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.2",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "@types/react-slick": "^0.23.13",
+    "@vitejs/plugin-react": "4.5.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.16.0",
-    "eslint-config-next": "15.3.0",
+    "eslint-config-next": "15.4.4",
+    "jsdom": "26.1.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.4.2",
-    "tailwindcss": "3",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12",
     "typescript": "5.7.3"
   },
   "engines": {
@@ -59,7 +55,9 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "sharp"
+      "sharp",
+      "esbuild",
+      "unrs-resolver"
     ]
   }
 }
